added two pages - contact and portfolio, and CSS styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body> 
     <!-- Boot Strap Nav Bar Start -->
+    <div class="row">
+      <div class="col-med-12 col-xs-12 col-sm-12">
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,24 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+              </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -44,6 +36,8 @@
           </form>
         </div>
       </nav>
+    </div>
+  </div>
 <!-- Nav Bar End -->
 
       <div class="container">
@@ -56,30 +50,30 @@
        <!-- Row 1 End -->
         <!-- Row 2 Start -->
         <div class="row">
-            <div class="col-md-6">
-                <p>Lorem ipsum... </p>
+            <div class="col-md-6 col-xs-12 col-sm-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Blandit turpis cursus in hac habitasse. Eget nunc scelerisque viverra mauris in. Quam nulla porttitor massa id. In ornare quam viverra orci sagittis eu volutpat odio facilisis. Risus sed vulputate odio ut enim. Nulla facilisi morbi tempus iaculis. Feugiat vivamus at augue eget arcu dictum varius. Risus ultricies tristique nulla aliquet enim tortor at auctor urna. Odio pellentesque diam volutpat commodo sed egestas egestas. Id cursus metus aliquam eleifend mi. Urna nec tincidunt praesent semper feugiat nibh.</p>
             </div>    
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12 col-sm-4">
                 <img class="img img-thumbnail" src="https://dejpknyizje2n.cloudfront.net/marketplace/products/pink-fluffy-unicorn-llama-sticker-1541440936.2979894.png" alt="llama unicorn">
             </div>    
         </div>
         <!-- Row 2 End -->
         <!-- Row 3 Start -->
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12 col-sm-4">
                 <img class="img img-thumbnail" src="https://ih0.redbubble.net/image.447716312.0228/pp,550x550.jpg" alt="Llamicorn">
             </div>    
-            <div class="col-md-6">
-                <p>Lorem ipsum... </p>
+            <div class="col-md-6 col-xs-12 col-sm-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Blandit turpis cursus in hac habitasse. Eget nunc scelerisque viverra mauris in. Quam nulla porttitor massa id. In ornare quam viverra orci sagittis eu volutpat odio facilisis. Risus sed vulputate odio ut enim. Nulla facilisi morbi tempus iaculis. Feugiat vivamus at augue eget arcu dictum varius. Risus ultricies tristique nulla aliquet enim tortor at auctor urna. Odio pellentesque diam volutpat commodo sed egestas egestas. Id cursus metus aliquam eleifend mi. Urna nec tincidunt praesent semper feugiat nibh.</p>
             </div>    
         </div>
         <!-- Row 3 End -->
         <!-- Row 4 Start -->
         <div class="row">
-                <div class="col-md-6">
-                    <p>Lorem ipsum... </p>
+                <div class="col-md-6 col-xs-12 col-sm-8">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Blandit turpis cursus in hac habitasse. Eget nunc scelerisque viverra mauris in. Quam nulla porttitor massa id. In ornare quam viverra orci sagittis eu volutpat odio facilisis. Risus sed vulputate odio ut enim. Nulla facilisi morbi tempus iaculis. Feugiat vivamus at augue eget arcu dictum varius. Risus ultricies tristique nulla aliquet enim tortor at auctor urna. Odio pellentesque diam volutpat commodo sed egestas egestas. Id cursus metus aliquam eleifend mi. Urna nec tincidunt praesent semper feugiat nibh.</p>
                 </div>    
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12 col-sm-8">
                     <img class="img img-thumbnail" src="https://previews.123rf.com/images/irinashi/irinashi1807/irinashi180700304/104458331-cute-fluffy-unicorn-llama-alpaca-.jpg" alt="Time to be a unicorn">
                 </div>    
             </div>
@@ -87,7 +81,9 @@
         <!-- Row 5 Start -->
         <div class="row">
             <div class="col-md-12">
+              <center>
                 <h2>Footer!</h2>
+              </center>
             </div>
         </div>
         <!-- Row 5 End -->
